Add apple styling,background image and gradient to nav-bar

--- a/index.html
+++ b/index.html
@@ -9,42 +9,85 @@
       rel="stylesheet"
       href="http://fonts.googleapis.com/css?family=Lato:100,300,400"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <main class="main-div">
       <div class="bg-image">
-        <header class="primary-header container group">
-          <nav class="nav primary-nav">
-            <a href="index.html">Home</a>
-            <a href="speakers.html">Speakers</a>
-            <a href="schedule.html">Schedule</a>
-            <a href="venue.html">Venue</a>
-            <a href="register.html">Register</a>
+        <header class="primary-header container">
+          <nav class="nav primary-nav container">
+            <div>
+              <button type="button" class="btn-apple">
+                <!--Apple-->
+                <img
+                  src="images/apple-logo-png.png"
+                  alt="apple-logo"
+                />&nbsp;</button
+              ><!--
+            --><button type="button" class="btn-apple">Store</button
+              ><!--
+            --><button type="button" class="btn-apple">Mac</button
+              ><!--
+            --><button type="button" class="btn-apple">iPod</button
+              ><!--
+            --><button type="button" class="btn-apple">iPhone</button
+              ><!--
+            --><button type="button" class="btn-apple">iPad</button
+              ><!--6.5
+            --><button type="button" class="btn-apple">iTunes</button
+              ><!--
+            --><button type="button" class="btn-apple">Support</button
+              ><!--
+            --></div>
+            <div>
+              <input type="text" class="in-apple" />
+            </div>
           </nav>
         </header>
         <section class="banner container">
-          <h2>What will your verse be?</h2>
+          <p class="catch-phrase">What will your verse be?</p>
           <h3>
             Everyone has something to share. See how people are using <br />
             iPad in their unique ways to add to the world's story.
           </h3>
 
-          <p>Watch the "Your Verse" film and explore their stories</p>
+          <span>
+            <a href="#" class="linktext"
+              >Watch the "Your Verse" film and explore their stories</a
+            >
+            <a href="#" class="play"
+              ><i class="fa fa-play-circle-o" aria-hidden="true"></i></a
+          ></span>
         </section>
       </div>
 
       <div class="iphone-ads">
         <div class="iphone-ads-image promo1">
-          <a href="#"><img src="images/promo1.jpg"/></a>
+          <a href="#"
+            ><img
+              src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5s.jpg"
+          /></a>
         </div>
         <div class="iphone-ads-image promo2">
-          <a href="#"><img src="images/promo2.jpg"/></a>
+          <a href="#"
+            ><img
+              src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5c.jpg"
+          /></a>
         </div>
         <div class="iphone-ads-image promo3">
-          <a href="#"><img src="images/promo3.jpg"/></a>
+          <a href="#"
+            ><img
+              src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_30_years.jpg"
+          /></a>
         </div>
         <div class="iphone-ads-image-4 promo4">
-          <a href="#"><img src="images/promo4.jpg"/></a>
+          <a href="#"
+            ><img
+              src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_supplier_responsibility.jpg"
+          /></a>
         </div>
       </div>
       <footer class="apple-footer container">
@@ -77,7 +120,11 @@
               <a href="#">Job Opportunities</a>&nbsp;|
               <a href="#">Contact Us</a>&nbsp;|
             </div>
-            <div>&nbsp;<img src="images/usa.png" /></div>
+            <div>
+              &nbsp;<img
+                src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png"
+              />
+            </div>
           </div>
         </div>
       </footer>
