--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5s.jpg"
-          /></a>
+          alt ="promo1"/></a>
         </div>
         <div class="iphone-ads-image promo2">
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5c.jpg"
-          /></a>
+        alt="promo2"  /></a>
         </div>
         <div class="iphone-ads-image promo3">
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_30_years.jpg"
-          /></a>
+          alt="promo3"/></a>
         </div>
         <div class="iphone-ads-image-4 promo4">
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_supplier_responsibility.jpg"
-          /></a>
+          alt="promo4"/></a>
         </div>
       </div>
       <footer class="apple-footer container">
@@ -123,7 +123,7 @@
             <div>
               &nbsp;<img
                 src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png"
-              />
+              alt="usa flag"/>
             </div>
           </div>
         </div>
