Changed font to Manrope to meore closely match original

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <title>Styles Conference</title>
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <link
-      rel="stylesheet"
-      href="http://fonts.googleapis.com/css?family=Lato:100,300,400"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
