Added appropriate title,edited use of semantic tags to conform to standard,changed use of button to use li and a href tags,made footer text bold inorder to be seen clearly

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Styles Conference</title>
+    <title>Apple</title>
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -17,39 +20,36 @@
         <header class="primary-header container">
           <nav class="nav primary-nav container">
             <div>
-              <button type="button" class="btn-apple">
-                <!--Apple-->
-                <img
-                  src="images/apple-logo-png.png"
-                  alt="apple-logo"
-                />&nbsp;</button
-              ><!--
-            --><button type="button" class="btn-apple">Store</button
-              ><!--
-            --><button type="button" class="btn-apple">Mac</button
-              ><!--
-            --><button type="button" class="btn-apple">iPod</button
-              ><!--
-            --><button type="button" class="btn-apple">iPhone</button
-              ><!--
-            --><button type="button" class="btn-apple">iPad</button
-              ><!--6.5
-            --><button type="button" class="btn-apple">iTunes</button
-              ><!--
-            --><button type="button" class="btn-apple">Support</button
-              ><!--
-            --></div>
+              <ul class="li-apple">
+                <li>
+                  <a href="#">
+                    <img
+                      src="images/apple-logo-png.png"
+                      alt="apple-logo"
+                    />&nbsp;</a
+                  >
+                </li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">iPod</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">iTunes</a></li>
+                <li><a href="#">Support</a></li>
+              </ul>
+            </div>
             <div>
               <input type="text" class="in-apple" />
             </div>
           </nav>
         </header>
         <section class="banner container">
-          <p class="catch-phrase">What will your verse be?</p>
-          <h3>
-            Everyone has something to share. See how people are using <br />
-            iPad in their unique ways to add to the world's story.
-          </h3>
+          <h3 class="catch-phrase">What will your verse be?</h3>
+          <p>
+            Everyone has something to share. See how people are using
+          </p>
+          <p />
+          <p>iPad in their unique ways to add to the world's story.</p>
 
           <span>
             <a href="#" class="linktext"
@@ -66,25 +66,29 @@
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5s.jpg"
-          alt ="promo1"/></a>
+              alt="promo1"
+          /></a>
         </div>
         <div class="iphone-ads-image promo2">
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_iphone5c.jpg"
-        alt="promo2"  /></a>
+              alt="promo2"
+          /></a>
         </div>
         <div class="iphone-ads-image promo3">
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_30_years.jpg"
-          alt="promo3"/></a>
+              alt="promo3"
+          /></a>
         </div>
         <div class="iphone-ads-image-4 promo4">
           <a href="#"
             ><img
               src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/promo_supplier_responsibility.jpg"
-          alt="promo4"/></a>
+              alt="promo4"
+          /></a>
         </div>
       </div>
       <footer class="apple-footer container">
@@ -120,7 +124,8 @@
             <div>
               &nbsp;<img
                 src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png"
-              alt="usa flag"/>
+                alt="usa flag"
+              />
             </div>
           </div>
         </div>
